# serializer version: 1
# name: test_hockeytech[test_in]
  dict({
    'api_message': None,
    'api_url': 'https://lscluster.hockeytech.com/feed/index.php?feed=modulekit&view=scorebar&key=2c2b89ea7345cae8&client_code=echl&lang=en&fmt=json&numberofdaysback=0&numberofdaysahead=90',
    'attribution': 'Powered by HockeyTech.com',
    'balls': None,
    'clock': '11:29 - 1st',
    'date': '2026-04-28T23:05Z',
    'down_distance_text': None,
    'event_name': 'FW @ IND',
    'event_url': 'https://www.thepwhl.com/en/game/25433',
    'friendly_name': 'test_in',
    'icon': 'mdi:hockey-puck',
    'last_play': None,
    'league': 'XXX',
    'league_logo': None,
    'league_name': 'East Coast Hockey League',
    'league_path': 'ECHL',
    'location': 'Fishers, Indiana',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'IND',
    'opponent_colors': list([
      '#D3D3D3',
      '#A9A9A9',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'home',
    'opponent_id': '65',
    'opponent_logo': 'https://assets.leaguestat.com/echl/logos/50x50/65.png',
    'opponent_long_name': 'Indy Fuel',
    'opponent_name': 'Fuel',
    'opponent_rank': None,
    'opponent_record': '0-2-0',
    'opponent_score': '1',
    'opponent_sets_won': None,
    'opponent_shots_on_target': 0,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': 'https://www.thepwhl.com/en/team/65',
    'opponent_win_probability': 0.0,
    'opponent_winner': None,
    'outs': None,
    'overunder': None,
    'possession': None,
    'quarter': 1,
    'season': 'regular-season',
    'series_summary': None,
    'sport': 'hockey',
    'sport_path': 'hockeytech',
    'strikes': None,
    'team_abbr': 'FW',
    'team_colors': list([
      '#D3D3D3',
      '#A9A9A9',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'away',
    'team_id': '60',
    'team_logo': 'https://assets.leaguestat.com/echl/logos/50x50/60.png',
    'team_long_name': 'Fort Wayne Komets',
    'team_name': 'Komets',
    'team_rank': None,
    'team_record': '2-0-0',
    'team_score': '1',
    'team_sets_won': None,
    'team_shots_on_target': 0,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': 'https://www.thepwhl.com/en/team/60',
    'team_win_probability': 0.0,
    'team_winner': None,
    'tv_network': None,
    'venue': 'Fishers Event Center',
  })
# ---
# name: test_hockeytech[test_post]
  dict({
    'api_message': None,
    'api_url': 'https://lscluster.hockeytech.com/feed/index.php?feed=modulekit&view=scorebar&key=446521baf8c38984&client_code=pwhl&lang=en&fmt=json&numberofdaysback=0&numberofdaysahead=90',
    'attribution': 'Powered by HockeyTech.com',
    'balls': None,
    'clock': 'Final/OT',
    'date': '2026-04-26T02:00Z',
    'down_distance_text': None,
    'event_name': 'MTL @ SEA',
    'event_url': 'https://www.thepwhl.com/en/game/326',
    'friendly_name': 'test_post',
    'icon': 'mdi:hockey-puck',
    'last_play': None,
    'league': 'XXX',
    'league_logo': 'https://assets.leaguestat.com/pwhl/logos/pwhl.png',
    'league_name': 'Professional Womens Hockey League',
    'league_path': 'PWHL',
    'location': 'Seattle, WA',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'MTL',
    'opponent_colors': list([
      '#862633',
      '#ffffff',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'away',
    'opponent_id': '3',
    'opponent_logo': 'https://assets.leaguestat.com/pwhl/logos/50x50/3.png',
    'opponent_long_name': 'Montréal Victoire',
    'opponent_name': 'Victoire',
    'opponent_rank': None,
    'opponent_record': '22-6-2',
    'opponent_score': '2',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': 'https://www.thepwhl.com/en/team/3',
    'opponent_win_probability': None,
    'opponent_winner': True,
    'outs': None,
    'overunder': None,
    'possession': None,
    'quarter': 4,
    'season': 'regular-season',
    'series_summary': None,
    'sport': 'hockey',
    'sport_path': 'hockeytech',
    'strikes': None,
    'team_abbr': 'SEA',
    'team_colors': list([
      '#002d72',
      '#69b3e7',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'home',
    'team_id': '8',
    'team_logo': 'https://assets.leaguestat.com/pwhl/logos/50x50/8.png',
    'team_long_name': 'Seattle Torrent',
    'team_name': 'Torrent',
    'team_rank': None,
    'team_record': '9-16-5',
    'team_score': '1',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': 'https://www.thepwhl.com/en/team/8',
    'team_win_probability': None,
    'team_winner': False,
    'tv_network': 'PWHL Live',
    'venue': 'Climate Pledge Arena',
  })
# ---
# name: test_hockeytech[test_pre]
  dict({
    'api_message': None,
    'api_url': 'https://lscluster.hockeytech.com/feed/index.php?feed=modulekit&view=scorebar&key=446521baf8c38984&client_code=pwhl&lang=en&fmt=json&numberofdaysback=0&numberofdaysahead=90',
    'attribution': 'Powered by HockeyTech.com',
    'balls': None,
    'clock': '7:00 pm EDT',
    'date': '2026-04-30T23:00Z',
    'down_distance_text': None,
    'event_name': 'OTT @ BOS',
    'event_url': 'https://www.thepwhl.com/en/game/338',
    'friendly_name': 'test_pre',
    'icon': 'mdi:hockey-puck',
    'last_play': None,
    'league': 'XXX',
    'league_logo': 'https://assets.leaguestat.com/pwhl/logos/pwhl.png',
    'league_name': 'Professional Womens Hockey League',
    'league_path': 'PWHL',
    'location': 'Lowell, MA',
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'OTT',
    'opponent_colors': list([
      '#c8102e',
      '#000000',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'away',
    'opponent_id': '5',
    'opponent_logo': 'https://assets.leaguestat.com/pwhl/logos/50x50/5.png',
    'opponent_long_name': 'Ottawa Charge',
    'opponent_name': 'Charge',
    'opponent_rank': None,
    'opponent_record': '0-0-0',
    'opponent_score': '0',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': 'https://www.thepwhl.com/en/team/5',
    'opponent_win_probability': None,
    'opponent_winner': None,
    'outs': None,
    'overunder': None,
    'possession': None,
    'quarter': 1,
    'season': 'regular-season',
    'series_summary': None,
    'sport': 'hockey',
    'sport_path': 'hockeytech',
    'strikes': None,
    'team_abbr': 'BOS',
    'team_colors': list([
      '#1a3c34',
      '#f0c744',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'home',
    'team_id': '1',
    'team_logo': 'https://assets.leaguestat.com/pwhl/logos/50x50/1.png',
    'team_long_name': 'Boston Fleet',
    'team_name': 'Fleet',
    'team_rank': None,
    'team_record': '0-0-0',
    'team_score': '0',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': 'https://www.thepwhl.com/en/team/1',
    'team_win_probability': None,
    'team_winner': None,
    'tv_network': None,
    'venue': 'Tsongas Center',
  })
# ---
